Sat Jan 18 21:24:49 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c: IP_MULTICAST_LOOP and IP_MULTICAST_TTL socket
	  option takes a byte on OpenBSD.
	  Fixed by Jeremy Evans.  [ruby-core:59496] [Bug #9350]

Sat Jan 18 21:19:04 2014  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: Make proxy disabling working again.
	  Fixed by Christophe Philemotte.   [ruby-core:59650] [Bug #9385]

Fri Jan 17 20:05:02 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator): keep source information methods
	  which start and end with '__'.  [ruby-core:59718] [Bug #9403]

Fri Jan 17 17:58:04 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_mod_s_constants): return its own constants for other
	  than Module itself.  [ruby-core:59763] [Bug #9413]

Tue Jan 16 00:17:00 2014  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.gemspec: bigdecimal version 1.2.5.

Wed Jan 15 20:30:31 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (io_binwrite): use writev(2) to avoid double write if available.

	* configure.in: check writev(2)

Wed Jan 15 14:04:33 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (get_encoding): respect BOM on pseudo encodings.
	  [ruby-dev:47895] [Bug #9415]

Wed Jan 15 14:03:47 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (get_actual_encoding): get actual encoding according to
	  the BOM if exists.

	* string.c (rb_str_inspect): use according encoding, instead of
	  pseudo encodings, UTF-{16,32}.  [ruby-core:59757] [Bug #8940]

Tue Jan 14 21:07:22 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* ext/thread/thread.c (rb_szqueue_clear): notify SZQUEUE_WAITERS
	  on SizedQueue#clear. [ruby-core:59462] [Bug #9342]

	* test/thread/test_queue.rb: add test. the patch is from
	  Justin Collins.

Tue Jan 14 15:58:43 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (CLASS_NAME): macro to wrap
	  depending on PRIsVALUE for 1.9.  [Backport #9406]
